// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addOrderToDB 1`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
    },
  ],
]
`;

exports[`addOrderToDB 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`addOrderToDB 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "add",
    "confirmed",
    "orderProcessor",
  ],
]
`;

exports[`addOrderToDB in queue but no key value 1`] = `
Array [
  Array [
    "orders|add",
  ],
]
`;

exports[`addOrderToDB not in queue 1`] = `
Array [
  Array [
    "orders|add",
  ],
]
`;

exports[`addOrderToPersistence 1`] = `
Array [
  Array [
    "orders|add|0xOrderHash",
    "{\\"liveOrder\\":{\\"orderHash\\":\\"0xOrderHash\\"}}",
  ],
]
`;

exports[`addOrderToPersistence 2`] = `
Array [
  Array [
    "orders|add",
    "0xOrderHash",
  ],
]
`;

exports[`addOrderToPersistence 3`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
    },
    "add",
    "confirmed",
    "relayer",
  ],
]
`;

exports[`cancelOrderInDB 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`cancelOrderInDB 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`cancelOrderInDB 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "cancel",
    "confirmed",
    "orderProcessor",
  ],
]
`;

exports[`cancelOrderInDB 4`] = `"orders|cancel|0xOrderHash"`;

exports[`cancelOrderInDB no order 1`] = `
Array [
  Array [
    "orders|cancel",
  ],
]
`;

exports[`cancelOrderInDB rawOrder failed 1`] = `"orders|cancel|0xOrderHash"`;

exports[`cancelOrderInPersistence 1`] = `
Array [
  Array [
    "orders|add|0xOrderHash",
    "",
  ],
  Array [
    "orders|cancel|0xOrderHash",
    "0xOrderHash",
  ],
]
`;

exports[`cancelOrderInPersistence 2`] = `
Array [
  Array [
    "orders|cancel",
    "{\\"orderHash\\":\\"0xOrderHash\\"}",
  ],
]
`;

exports[`cancelOrderInPersistence 3`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
    },
    "cancel",
    "confirmed",
    "relayer",
  ],
]
`;

exports[`constructNewLiveOrder 1`] = `
Object {
  "account": "makerAddress",
  "amount": 1.23e-16,
  "currentSequence": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.26973684,
  "side": "bid",
}
`;

exports[`constructNewLiveOrder 2`] = `
Object {
  "account": "takerAddress",
  "amount": 4.56e-16,
  "currentSequence": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 3.70731707,
  "side": "ask",
}
`;

exports[`getLiveOrderInPersistence in add queue 1`] = `"test"`;

exports[`getLiveOrderInPersistence only in db 1`] = `
Object {
  "liveOrder": "test",
}
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;
